--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "supertest": "^4.0.2",
     "ts-jest": "^25.3.1",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
+    "typescript": "^4.0.3"
   },
   "dependencies": {
+    "date-fns": "^2.16.1",
     "express": "^4.17.1",
+    "uuid": "^8.3.1",
     "uuidv4": "^6.0.7"
   }
 }
